Security from Backend

--- a/Orders/Orders.Backend/appsettings.json
+++ b/Orders/Orders.Backend/appsettings.json
@@ -8,11 +8,17 @@
     "tokenName": "X-CSCAPI-KEY",
     "tokenValue": "NUZicm9hR0FUb0oxUU5mck14NEY3cEFkcU9GR3VqdEhVOGZlODlIRQ=="
   },
+  "jwtKey": "HSDBf55652r3!@&^%kjhsdbgu451748186ffbvasdg%*vgubjcbhfddsdAWcbxjg$&bdsygvsdgalLH:bdBldnjkhfbd*RDvhbjhfzbjhlfd56141re558c##@RFD$44de4)(DF",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "runtimeOptions": {
+    "configProperties": {
+      "System.Globalization.Invariant": false
+    }
+  }
 }
